--- a/style.css
+++ b/style.css
@@ -73,19 +73,22 @@ h1 {
 
 #obrazek {
 	padding: 5px;
+	margin-right: 30px;
 	width: 30%;
-	height: auto;
+	height: 30%;
 	border-radius: 50%;
 	border: 3px dotted var(--cervena);
 }
 
 #moznosti {
 	flex: 1;
+	display: flex;
 }
 
 #odpovedi {
-	margin: 0;
 	padding: 0;
+	width: 70%;
+	height: auto;
 	font-size: 24px;
 	list-style: none;
 }
@@ -119,14 +122,14 @@ h1 {
 .hodnoceni-odpovedi {
 	margin: 0;
 	padding: 0;
-	font-size: 20px;
+	font-size: 16px;
 	list-style: none;
 }
 
 .hodnoceni-otazka {
 	margin: 20px 0 10px 0;
 	font-family: 'Bangers', cursive;
-	font-size: 26px;
+	font-size: 22px;
 	line-height: 1.2;
 	text-align: left;
 	color: black;
